--- a/index-carlos.html
+++ b/index-carlos.html
@@ -12,13 +12,13 @@
         <h1>Desastres en zonas</h1>
 
         <nav class="menu">
-            <a href="index-cata.html" class="btn">Inicio</a>
+            <a href="index.html" class="btn">Inicio</a>
             <a href="index-josue.html" class="btn">Desastres</a>
             <a href="index-cristian.html" class="btn">Instituciones</a>
             <a href="#" class="btn activo">Acciones</a>
         </nav>
     </header>
-    
+
 
     <main class="contenedor">
 
