--- a/index-cristian.html
+++ b/index-cristian.html
@@ -13,7 +13,7 @@
     <header>
         <h1>Desastres en zonas</h1>
         <nav>
-            <a href="index-cata.html">Inicio</a>
+            <a href="index.html">Inicio</a>
             <a href="index-josue.html">Desastres</a>
             <a class="active" href="#">Instituciones</a>
             <a href="index-carlos.html">Acciones</a>
