--- a/index-josue.html
+++ b/index-josue.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Desastres en zonas</h1>
         <nav>
-            <a  href="index-cata.html">Inicio</a>
+            <a  href="index.html">Inicio</a>
             <a  class="active" href="#">Desastres</a>
             <a href="index-cristian.html">Instituciones</a>
             <a href="index-carlos.html">Acciones</a>
