--- a/index.html
+++ b/index.html
@@ -1,44 +1,81 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Terremoto Chile 2010</title>
-    <link rel="stylesheet" href="style-cata.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <h1>Terremoto chile 2010</h1>
-        <nav>
-            <a class="active" href="#">Inicio</a>
-            <a href="index-josue.html">Desastres</a>
-            <a href="index-cristian.html">Instituciones</a>
-            <a href="index-carlos.html">Acciones</a>
-        </nav>
+      <h1>Terremoto chile 2010</h1>
+      <nav>
+        <a class="active" href="#">Inicio</a>
+        <a href="#">Desastres</a>
+        <a href="#">Instituciones</a>
+        <a href="#">Acciones</a>
+      </nav>
     </header>
 
     <main class="contenido">
-        <section class="texto">
-            <p>
-                Alcanzó una magnitud de 8,8 MW. Es considerado como el segundo más fuerte 
-                en la historia del país y el octavo más fuerte registrado por la humanidad. 
-                El epicentro se ubicó en el mar chileno, frente a la costa de la entonces 
-                Región del Biobío (actual Región de Ñuble)...
-            </p>
-        </section>
+      <section class="texto">
+        <p>
+          Alcanzó una magnitud de 8,8 MW. Es considerado como el segundo más
+          fuerte en la historia del país y el octavo más fuerte registrado por
+          la humanidad. El epicentro se ubicó en el mar chileno, frente a la
+          costa de la entonces Región del Biobío (actual Región de Ñuble), cerca
+          de 150 kilómetros al noroeste de Concepción y 63 kilómetros al
+          suroeste de Cauquenes, a una profundidad de 30,1 kilómetros bajo la
+          corteza terrestre. El sismo tuvo una duración máxima de 4 minutos en
+          las zonas cercanas al epicentro, y más de 2 minutos en Santiago.
+        </p>
+      </section>
 
-      
-        <section class="imagen">
-            <img src="https://literalmagazine.com/assets/terremoto_chile-620x350.jpg" alt="Bandera de Chile">
-            <p class="pie">Fue un sismo ocurrido a las 03:34:08am del sábado 27 de febrero de 2010.</p>
-        </section>
+      <section class="imagen">
+        <img
+          src="https://literalmagazine.com/assets/terremoto_chile-620x350.jpg"
+          alt="Bandera de Chile"
+        />
+        <p class="pie">
+          Fue un sismo ocurrido a las 03:34:08am del sábado 27 de febrero de
+          2010,
+        </p>
+      </section>
 
-        <aside class="autor">
-            <div class="icono"> <img src=""></div>
-            <p>Escrito por: Catalina Caripán</p>
-        </aside>
+      <aside class="autor">
+        <div class="icono">
+            <img class="icono" src="foto-perfil.jpg"/></div>
+        <p>Escrito por: Catalina Caripán</p>
+      </aside>
+      <section class="texto2">
+        <img
+          class="imagen2"
+          src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/2010_Chile_earthquake_-_Building_destroyed_in_Concepci%C3%B3n.jpg/250px-2010_Chile_earthquake_-_Building_destroyed_in_Concepci%C3%B3n.jpg"
+        />
+        <h2 class="pie">Articulo</h2>
+        <p class="pie">
+          Terremoto 27F – Emergencia y Desastre. (s/f). Mineduc.cl. Recuperado
+          el 11 de noviembre de 2025, de
+          https://emergenciaydesastres.mineduc.cl/terremoto-27f/
+        </p>
+      </section>
+      <section class="texto">
+        <span><h2>Consecuencias</h2></span>
+        <p>
+          Las regiones afectadas (de norte a sur) fueron Valparaíso,
+          Metropolitana de Santiago, O’Higgins, Maule, Biobío y La Araucanía,
+          que acumulan más de 13 millones de habitantes, cerca del 80 % de la
+          población del país.
+        </p>
+       <span><h4>Areas afectadas</h4></span> <ul>
+          <li>Valparaíso</li>
+          <li>Metropolitana de Santiago</li>
+          <li>O’Higgins</li>
+          <li>Maule</li>
+          <li>Biobío</li>
+          <li>Araucanía</li>
+        </ul>
+      </section>
     </main>
-
-</body>
+  </body>
 </html>
