--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <h1>Terremoto chile 2010</h1>
       <nav>
         <a class="active" href="#">Inicio</a>
-        <a href="#">Desastres</a>
-        <a href="#">Instituciones</a>
-        <a href="#">Acciones</a>
+        <a href="index-josue.html">Desastres</a>
+        <a href="index-cristian.html">Instituciones</a>
+        <a href="index-carlos.html">Acciones</a>
       </nav>
     </header>
 
